--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -87,8 +87,8 @@
 
 <div class="top-strip"> 
     <div class="container menu-container">
-        <NavLink class="menu-link" href="/wealth-journey"> <span class="bi bi-calculator"></span> Wealth Building</NavLink>
-        <NavLink class="menu-link d-none d-md-inline" href="/howmuch-to-save-per-month"> <span class="bi bi-piggy-bank"></span> Goal Savings</NavLink>
+        <NavLink class="menu-link" href="/wealth-journey"> <span class="bi bi-piggy-bank"></span> Wealth Building</NavLink>
+        @* <NavLink class="menu-link d-none d-md-inline" href="/howmuch-to-save-per-month"> <span class="bi bi-piggy-bank"></span> Goal Savings</NavLink> *@
         <NavLink class="menu-link" href="/living-cost"> <span class="bi bi-list-ul"></span> Living Cost</NavLink>
         <NavLink class="menu-link" href="/retirement-fire"> <span class="bi bi-wallet2"></span> Retirement Drawdown</NavLink>
 
